testsuite/tests/typecheck/should_compile/T22141e_Aux.hs
{-# LANGUAGE DataKinds #-}
module T22141e_Aux where

type T = 42
